# act-lens

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  pyproject.toml  renovate.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  release.yml  simple-test.yml  test-fail.yml  test-failure.yml
docs/: design.md
scripts/: check_detect_secrets.py
src/act_lens/: __init__.py  cli.py  formatter.py  models.py  parser.py  runner.py  utils.py
tests/: __init__.py  test_duration.py  test_formatter.py  test_models.py  test_parser.py  test_runner.py  test_utils.py
