[project]
name = "act-lens"
version = "0.1.0"
description = "actの出力をレンズで覗いて整形するCLIツール"
readme = "README.md"
requires-python = ">=3.14.2"
authors = [{ name = "scottlz0310", email = "scott.lz0310@gmail.com" }]
keywords = ["github-actions", "act", "cli", "ci", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.21.1",
    "rich>=14.3.0",
    "pydantic>=2.12.5",
    "pyperclip>=1.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "basedpyright>=1.37.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "bandit>=1.9.3",
    "safety>=3.7.0",
    "pre-commit>=4.5.1",
    "detect-secrets>=1.5.0",
    "types-pyperclip>=1.9.0.20250801",
]

[project.scripts]
act-lens = "act_lens.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"] # line too long (Ruffのフォーマッターに任せる)

[tool.basedpyright]
typeCheckingMode = "strict"
reportMissingImports = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=act_lens --cov-report=term-missing"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]         # assert使用を許可（テストで必要）
